# multimodalmanual

./: .env.example  .gitignore  CLAUDE.md  README.md  knowledge_base.json  machine-maintenance-pipeline.md  main.py  processed_manual.json  pyproject.toml
doc_preprocessing/: __init__.py  pdf_parser.py  section_classifier.py
manual_preprocessor/: __init__.py  document_normalizer.py  instruction_extractor.py  models.py  parser.py  pipeline.py  sources.py
models/: __init__.py  machine_knowledge.py
phase01_intelligence/: __init__.py  crawler.py  pipeline.py
subtask_generation/: synthesizer.py
viz_io/: app.py
vlm_detection/: vlm_analyzer.py
