[project]
name = "multimodalmanual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browserbase>=1.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "overshoot @ git+https://github.com/Overshoot-ai/overshoot-python.git",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
